Change to css Changing code to fix white space that appears on bottom of screen when scrolling on mobile chrome browser when looking at book info.

--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,10 @@
     box-sizing: border-box;
 }
 
-html, body {
+body > div {
+    position: absolute;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: fixed;
-}
-
-body {
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
